Servers/UI/OJS.Servers.Ui/ClientApp/src/components/submissions/submission-grid-row/SubmissionGridRow.module.scss
@use 'src/styles/colors';
@use 'src/styles/fonts';
@use 'src/styles/variables';
@use 'src/styles/responsive';

.container {
  @extend %font-family-lato;

  align-items: center;
  color: colors.$text-dark-gray-color;
  display: flex;
  justify-content: flex-start;
  padding: 25px;

  .strategyContainer,
  .pointsContainer,
  .detailsContainer {
    padding: 0 10px;
  }

  .strategyContainer {
    flex: 1;
  }

  .pointsContainer {
    @extend %r-heading-primary;

    flex: 2 0 2vw;
    width: 2vw;
  }

  .detailsContainer {
    display: flex;
    flex: 17;
    flex-direction: column;
    gap: 10px;
  }

  .detailsButtonContainer {
    flex: 1 0 6vw;
  }

  .dateAndUsernameContainer {
    display: flex;
    gap: 5px;
    margin: 0 5px;
  }

  .link {
    @extend %r-heading-primary;

    color: #42abf8;
    display: inline-block;
    margin: 0 5px;
  }
}

